--- a/my-login/package.json
+++ b/my-login/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-select": "^5.0.1",
+    "create-react-class": "^15.7.0",
+    "option-type": "^0.2.0",
     "persistent-storage": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router": "^6.4.3",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.4.3",
@@ -23,6 +26,7 @@
     "sweetalert2": "^11.6.8",
     "switch": "^0.0.0",
     "typescript": "^4.8.4",
+    "value-type": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
